# EOSlib

./: .#CMakeLists.txt  .gitignore  CMakeLists.txt  ChangeLog  LICENSE.txt  README-Database  README-HE  README-Install  README.txt  SetEnv  TODO.txt  ToDo.txt  Utils.txt  Version  compare_outputs.cmake  data_path.h  listEOS  makefile
DATA/: ArrheniusHE.data  CMakeLists.txt  Davis.data  EOS.data  EOS_VT.data  ElasticPlastic.data  ElasticPlastic1D.data  Explosives.data  HE.data  HEburn.data  HMX.data  HOM.data  JWL.data  Libersky.data  ML_EOS.data  Porous.data  Sesame.data  Uniaxial.data  Units.data
DATA/test_data/: ApplicationsEOS.data  ApplicationsHE.data  ApplicationsNitromethane.data  ApplicationsPolymer.data  ApplicationsTest.data  ApplicationsValidationHE.data  ArrheniusTest.data  CMakeLists.txt  DavisTest.data  DnKappaTest.data  EOSTest.data  Elastic1DTest.data  ElasticPlasticTest.data  EosTest.data  ExtEOStypesTest.data  GenHayesTest.data  HEburnTest.data  HayesBMTest.data  HayesTest.data  IdealGasTest.data  JWLTest.data  MieGruneisenTest.data  PTequilibriumTest.data  PorousTest.data  StiffenedGasTest.data  mlDavisTest.data
Examples/: CMakeLists.txt  Cleanup.sh  DEBUG.txt  Function.C  HugoniotDB.C  HugoniotDB.sh  LowLevelHugoniot-new.C  LowLevelHugoniot-new.sh  LowLevelHugoniot.C  LowLevelHugoniot.sh  README.txt  Test.C  Test.sh
TEST/: CMakeLists.txt  NEWcompare_outputs.cmake  compare_outputs.cmake
TEST/blessed_output/: CMakeLists.txt  copyAllBlessed.sh  runEOSEOSdataOut.blessed  runEOSImpedanceMatchOut.blessed  runEOShelpOut.blessed
TEST/blessed_output/Applications/: CJ_plotErr.blessed  CJ_plotOut.blessed  CJstateOut.blessed  CV-rotationOut.blessed  CriticalPointOut.blessed  Deflagration-0Err.blessed  DeflagrationErr.blessed  DeflagrationOut.blessed  DeflagrationProfileErr.blessed  DetPolarOut.blessed  Detonation-0Err.blessed  DetonationOut.blessed  DissipationOut.blessed  EOSdataOut.blessed  FFprofileErr.blessed  HotSpotDeflagrationErr.blessed  HotSpotOut.blessed  ImpedanceMatchErr.blessed  ImpedanceMatchOut.blessed  IsobarErr.blessed  IsobarOut.blessed  IsothermOut.blessed  IsothermVTOut.blessed  PVstateErr.blessed  PVstateOut.blessed  PolarErr.blessed  PolarOut.blessed  ShockLocusOut.blessed  TestXRiemannOut.blessed  TestXisentropeErr.blessed  TestXisentropeOut.blessed  TestXmanagerErr.blessed  TestXmanagerOut.blessed  ThreeStepEvolutionOut.blessed  ThreeStepReactionTimeOut.blessed  ViscousProfileErr.blessed  WaveOut.blessed  ZND-SURFplusErr.blessed  ZNDprofileOut.blessed  ZNDprofileTWOut.blessed
TEST/blessed_output/Calc/: TestCalcErr.blessed  TestCalcOut.blessed
TEST/blessed_output/DataBase/: TestDBOut.blessed  data10out.blessed  data4out.blessed  data6out.blessed  data8out.blessed
TEST/blessed_output/EOStypes/: CMakeLists.txt  Test1Err.blessed  Test2Err.blessed  Test2VTErr.blessed  TestFrozenPorousErr.blessed
TEST/blessed_output/Eos/: Test1Err.blessed  Test1Out.blessed  Test2Err.blessed  Test3Err.blessed  Test3Out.blessed
TEST/blessed_output/ExtEOS/: TestXmanagerOut.blessed
TEST/blessed_output/ExtEOStypes/: CMakeLists.txt
src/: CMakeLists.txt  Compile  Install  README  SetEnv  amrita.build  makefile
src/Applications/: ArrheniusMixReactionTime.C  CJ_plot.C  CJstate.C  CMakeLists.txt  CV-rotation.C  CriticalPoint.C  Deflagration-0.C  Deflagration.C  DeflagrationProfile.C  DeflagrationSpeed.txt  Depend  DetPolar.C  Detonation.C  Dissipation.C  EOSdata.C  Examples.txt  FFprofile.C  HE.data  HE.data-  HEburnEvolution.C  HEburnRate.C  HEburnReactionTime.C  HotSpot.C  HotSpotDeflagration.C  ImpedanceMatch.C  IntegrateDeflagrationODEs.C  Isobar.C  Isotherm.C  IsothermVT.C  NMtest  NOTES.txt  Notes  PVstate.C  Plastic.C  Polar.C  PopPlotTrajectory.C  ReactiveShockLoci.C  Run  SesameVT.C  ShockLocus.C  (+17 more)
src/CClib/: CMakeLists.txt
src/Calc/: CMakeLists.txt  Calc.h  Depend  TestCalc.C  Token.h  amrita.build
src/DataBase/: CMakeLists.txt  Convert.C  Data  Data.C  DataBase.h  DataBaseError.h  DataBaseIterators.h  DataBaseParameters.h  DataFile.h  Depend  Handle.h  Test.data  TestDB.C  Testdl.C  Units.h  amrita.build
src/DnKappa/: CMakeLists.txt  Depend  DnKappa.C  DnKappa.h  Dn_kappa.C  EOS.h  ScaledDn.h  TestDnKappa.C  Wave.h  test.data
src/EOS/: CMakeLists.txt  Deflagration_gen.h  EOS.h  EOS_VT.h  EOSbase.h  Hugoniot_gen.h  IO.h  Isotherm_ODE.h  PrandtlMeyer_ODE.h  Riemann_gen.h  ShockPolar.h  ShockPolar_gen.h  States.h
src/EOStypes/: CMakeLists.txt  Depend  MakeSource  README  TestRiemann.C  amrita.build
src/Eos/: CMakeLists.txt  Depend  Detonation_gen.h  EOS.h  EOS_VT.h  Isentrope_ODE.h  README  Riemann.h  Test.data  Test3.C  amrita.build
src/ExtEOS/: CMakeLists.txt  Depend  EqExtEOS.h  ExtEOS.h  ExtEOS_VT.h  ExtEOSmanager.h  Hydro.h  IDOF.h  Riemann_genX.h  TestHydro.C  TestXmanager.C  amrita.build
src/ExtEOStypes/: CMakeLists.txt  Depend  EOSmanager.h  MakeSource  TestHE.C  amrita.build  tmp.diff
src/LinkList/: Array.h  ArrayTest.C  ArrayTest2.C  CMakeLists.txt  Depend  List.h  ListAccessTest.C  ListTest.C  NameArray.h  NameArrayTest.C  ReferenceList.h  ReferenceListTest.C  amrita.build
src/Local/: Arg.h  CMakeLists.txt  Depend  ErrorHandler.h  LocalIo.h  LocalMath.h  MakeFile  String1.h  Test.C  TestCat.C  TestError.C  TestFunc.C  TestManip.C  TestSplit.C  amrita.build  build.amr
src/MakeMake/: Depend  Depend.h  Echo.C  Install  List.h  MakeMake.C  TestMake  makefile  subs.h
src/Manager/: CMakeLists.txt  Depend  EOSmanager.h  EOSstate.h  ExtEOSmanager.h  ExtEOSstate.h  PointerArray.h  SplitWord.h  Test.C  TestXRiemann.C  TestXisentrope.C  TestXmanager.C  amrita.build
src/ODE/: CMakeLists.txt  Depend  Harmonic.C  ODE.h  RandomHarmonic.C  amrita.build
src/OneDFunction/: CMakeLists.txt  Depend  OneDFunction.h  Test.C  TestI.C  Xtest.C  amrita.build
src/Spline/: CMakeLists.txt  Depend  Spline.h  TestSpline.C  amrita.build
src/Table/: 9501-sol.asc  AsciiTable  CreateTable.C  Depend  HMX-sol.asc  MatToSesame.h  PBX9501sol950104.asc  README  TATB-sol.asc  TATB_e0-950202.asc  Table.h  test.data
src/backward/: strstream.h
(+1237 files in other folders)
